tests/NormalTests/paczka2/big_fuzzy/84558166.err
Error in line 7: UKiLw4gVA S484 53,3
Error in line 15: Y6xSLt S131 22,87
Error in line 10: UKiLw4gVA S937 91,5
Error in line 33: O7cE S937 170,2
Error in line 37: O7cE A698 67,7
Error in line 43: Y6xSLt S131 23,4
Error in line 41: O7cE S937 50,5
Error in line 47: O7cE A698 75,5
Error in line 29: UKiLw4gVA S484 142,0
Error in line 49: O7cE S484 98,1
Error in line 50: UKiLw4gVA S131 78,1
Error in line 36: MS9O S131 86,0
Error in line 56: O7cE S937 94,9
Error in line 61: A698 S484 10,6
Error in line 82: UKiLw4gVA S937 12,4
Error in line 91: UKiLw4gVA S131 76,3
Error in line 106: UKiLw4gVA A698 27,3
Error in line 111: UKiLw4gVA S131 0,5
Error in line 112: MS9O A698 13,6
Error in line 109: A698 A698 38,9
Error in line 116: Y6xSLt S937 67,6
Error in line 134: A698 S937 356,2
Error in line 97: 32gaSCB7G A698 182,5
Error in line 139: UKiLw4gVA S484 18,0
Error in line 157: MS9O S937 74,9
Error in line 158: 32gaSCB7G S484 31,9
Error in line 153: UKiLw4gVA A698 32,7
Error in line 186: UKiLw4gVA S484 40,73
Error in line 179: MS9O S131 88,1
Error in line 183: UKiLw4gVA S484 11,1
Error in line 200: MS9O S937 -1,5
Error in line 199: 32gaSCB7G A698 67,2
Error in line 201: 32gaSCB7G A198 191,9
Error in line 206: O7cE S131 61,8
Error in line 210: Y6xSLt A698 23,8
Error in line 205: MLJr A698 70,0
Error in line 217: 32gaSCB7G S131 55,7
Error in line 192: MS9O S937 48,1
Error in line 222: 32gaSCB7G S937 78,4
Error in line 219: O7cE S937 63,2
Error in line 208: UKiLw4gVA S937 102,3
Error in line 225: 32gaSCB7G S131 69,9
Error in line 227: O7cE S131 9,6
Error in line 237: O7cE S937 71,6
Error in line 235: 32gaSCB7G A698 22,4
